--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "keep-code",
   "version": "1.0.0",
   "description": "if nothing to do, let's me code",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -15,5 +15,14 @@
   "bugs": {
     "url": "https://github.com/cheogo/keep-code/issues"
   },
-  "homepage": "https://github.com/cheogo/keep-code#readme"
+  "homepage": "https://github.com/cheogo/keep-code#readme",
+  "dependencies": {
+    "koa": "^2.0.0"
+  },
+  "devDependencies": {
+    "babel-core": "^6.18.2",
+    "babel-loader": "^6.2.7",
+    "babel-preset-es2015": "^6.18.0",
+    "webpack": "^1.13.3"
+  }
 }
